--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -4,7 +4,8 @@
 	width: 100%;
 	border: solid 1px #DDDDDD;
     	border-radius: 4px;
-	text-align: right;
+	display: flex;
+    	justify-content: flex-end;
 	align-items: center;
 }
 
