--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -4,9 +4,6 @@
 	width: 100%;
 	border: solid 1px #DDDDDD;
     	border-radius: 4px;
-	display: flex;
-    	justify-content: flex-end;
-	align-items: center;
 }
 
 section.filters button {
@@ -18,6 +15,9 @@ section.filters button {
 	border: none;
 	border-radius: 4px;
 	margin-right: 30px;
+	float: right;
+    	margin-top: 11px;
+	margin-bottom: 11px;
 }
 section.filters button:hover{
     opacity: 0.9;
