--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -71,17 +71,18 @@ h4 {
 }
 
 .amenities li {
-	margin-top: 30;
+	margin-top: 30px;
 	padding-left: 45px;
 }
 
 ul {
-    list-style-type: none;
-    line-height: 25px;
-    padding-top: 0;
+    	list-style-type: none;
+    	line-height: 25px;
+    	padding-top: 0;
 }
 
 h2 {
-    font-size: 16px;
-    padding-left: 15px;
+	margin-top: 30px;
+    	font-size: 16px;
+    	padding-left: 15px;
 }
