--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -59,7 +59,7 @@ h4 {
 	visibility: hidden;
 	width: 100%;
     	margin: 0;
-    	padding: 0;
+    	padding-top: 30px;
 }
 
 .locations:hover >.popover{
@@ -71,9 +71,9 @@ h4 {
 }
 
 .amenities ul {
-	margin-top: 30px;
+	padding-top: 30px;
 	padding-left: 45px;
-	margin-bottom: 30px
+	padding-bottom: 30px
 }
 
 li {
@@ -88,7 +88,6 @@ li {
 }
 
 h2 {
-	margin-top: 30px;
     	font-size: 16px;
     	padding-left: 20px;
 }
