--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -58,8 +58,7 @@ h4 {
     	border-radius: 4px;
 	visibility: hidden;
 	width: 100%;
-    	margin: 0;
-    	padding-top: 30px;
+    	margin-top: 30px;
 }
 
 .locations:hover >.popover{
