--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -27,6 +27,7 @@ section.filters button:hover{
 	height: 100%;
 	width: 25%;
 	border-right: solid 1px #DDDDDD;
+	margin-left: 30px;
     	float: left;
 	text-align: left;
 }
