--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -57,7 +57,9 @@ h4 {
     	border-radius: 4px;
 	visibility: hidden;
 	width: 100%;
-   }
+	margin: 0;
+    	padding: 0;
+}
 
 .locations:hover >.popover{
     	visibility: visible;
