--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -26,6 +26,7 @@ section.filters button:hover{
 .locations {
 	height: 100%;
 	width: 25%;
+	margin-left: 30px;
 	border-right: solid 1px #DDDDDD;
     	float: left;
 	text-align: left;
