--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -34,6 +34,7 @@ section.filters button:hover{
 .amenities{
 	height: 100%;
     	width: 25%;
+	border-right: solid 1px #DDDDDD;
     	float: left;
 	text-align: left;
 }
@@ -60,6 +61,7 @@ h4 {
 	width: 100%;
 	margin: 0;
     	padding: 0;
+	padding-top: 30px;
 }
 
 .locations:hover >.popover{
@@ -75,9 +77,10 @@ h4 {
 	padding-bottom: 30px;
 	padding-left: 30px;
 
-li{
+ul{
 	list-style-type: none;
 }
 h2 {
+
     	font-size: 16px;
 }
