--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -43,14 +43,14 @@ h3 {
 	font-weight: 600;
 	margin-top: 13px;
     	margin-bottom: 0;
-	margin-left: 30px;
+	margin-left: 45px;
 }
 
 h4 {
 	font-weight: 400;
 	font-size: 14px;
 	margin-top: 3px;
-	margin-left: 30px;
+	margin-left: 45px;
 }
 .popover {
 	position: relative;
@@ -68,6 +68,14 @@ h4 {
     	visibility: visible;
 }
 
+ul{
+	list-style-type: none;
+}
+
+.inside {
+	padding-bottom: 30px;
+}
+
 .amenities:hover > .popover{
     	visibility: visible;
 }
@@ -75,12 +83,16 @@ h4 {
 .amenities ul {
 	padding-top: 30px;
 	padding-bottom: 30px;
-	padding-left: 30px;
-
-ul{
-	list-style-type: none;
 }
-h2 {
 
+.amenities li {
+	padding-left: 45px;
+}
+
+h2 {
+	padding-left: 20px;
     	font-size: 16px;
+	margin-bottom: 0px;
+	margin-top: 0px;
+	padding-top: 0px;
 }
